add responsivity for tablet

--- a/Home.html
+++ b/Home.html
@@ -247,7 +247,7 @@
         </div>
         <div class="redes_alight">
           <h3>Redes Sociais</h3>
-          <div>
+          <div class="redes">
             <a href=""><img src="src/img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
             <a href=""><img src="src/img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
             <a href=""><img src="src/img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
