--- a/src/More html/Avisos.html
+++ b/src/More html/Avisos.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet" href="../css/Avisos.css">
   <title>Beg</title>
 </head>
-<body>
+<body>  
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <img class="navbar-brand" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Logo">
@@ -21,8 +21,8 @@
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="../../Home.html">Home</a>
           </li>
-          <li class="nav-item active">
-            <a class="nav-link" href="../More html/Avisos.html">Avisos</a>
+          <li class="nav-item">
+            <a class="nav-link active" href="../More html/Avisos.html">Avisos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Condecorações</a>
@@ -56,13 +56,25 @@
     <div class="container">
       <h1>Avisos</h1>
       <div class="row">
-        <div class="col-sm-6 col-md-4">
+        <div class="col-sm-6 col-md-4 mb-3">
           <div class="card">
-            <img src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" class="card-img-top" alt="...">
             <div class="card-body">
-              <h5 class="card-title d-flex">Título do Aviso</h5> <div class="">bolinha de prioridade</div>
+              <div class="card-title-alight">
+                <h5 class="card-title d-flex">Título do Aviso</h5>
+                <p class="priority-boll"></p>
+              </div>
               <p class="card-text">Descrição do Aviso</p>
-              <a href="#" class="btn btn-primary">Saiba mais</a>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <div class="card-title-alight">
+                <h5 class="card-title d-flex">Título do Aviso</h5>
+                <p class="priority-boll"></p>
+              </div>
+              <p class="card-text">Descrição do Aviso</p>
             </div>
           </div>
         </div>
