--- a/Home.html
+++ b/Home.html
@@ -46,8 +46,7 @@
           </li>
         </ul>
         <form class="d-flex align-items-center justify-content-between" role="account">
-          <a class="user d-block" href="">Ola, Nome</a>
-          <img class="user_img" src="src/img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg">
+          <a class="user d-block" href="src/More html/Usuario.html">Ola, <span class="name">Nome</span> <img class="user_img" src="src/img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
         </form>
       </div>
     </div>
@@ -249,10 +248,8 @@
         <div class="redes_alight">
           <h3>Redes Sociais</h3>
           <div class="redes">
-            <a href=""><img src="src/img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
-            <a href=""><img src="src/img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
-            <a href=""><img src="src/img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
-            <a href=""><img src="src/img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
+            <a href="https://www.instagram.com/eebrigadeiroeduardo" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com/EE.BrigadeiroEduardoGomes" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
           </div>
         </div>
       </div>
