--- a/src/More html/Avisos.html
+++ b/src/More html/Avisos.html
@@ -46,8 +46,7 @@
           </li>
         </ul>
         <form class="d-flex align-items-center justify-content-between" role="account">
-          <a class="user d-block" href="">Olá, Nome</a>
-          <img class="user_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="User Image">
+          <a class="user d-block" href="Usuario.html">Ola, <span class="name">Nome</span> <img class="user_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
         </form>
       </div>
     </div>
@@ -78,9 +77,71 @@
             </div>
           </div>
         </div>
-        <!-- Adicionar outros cards aqui -->
+        <div class="col-sm-6 col-md-4 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <div class="card-title-alight">
+                <h5 class="card-title d-flex">Título do Aviso</h5>
+                <p class="priority-boll"></p>
+              </div>
+              <p class="card-text">Descrição do Aviso</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <div class="card-title-alight">
+                <h5 class="card-title d-flex">Título do Aviso</h5>
+                <p class="priority-boll"></p>
+              </div>
+              <p class="card-text">Descrição do Aviso</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-sm-6 col-md-4 mb-3">
+          <div class="card">
+            <div class="card-body">
+              <div class="card-title-alight">
+                <h5 class="card-title d-flex">Título do Aviso</h5>
+                <p class="priority-boll"></p>
+              </div>
+              <p class="card-text">Descrição do Aviso</p>
+            </div>
+          </div>
+        </div>
       </div>
   </main>
+  <footer>
+    <div class="footer_alight">
+      <img class="logo_footer" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg">
+      <div class="other_alight">
+        <h3>Outras Abas</h3>
+        <p>Aba 1</p>
+        <p>Aba 2</p>
+        <p>Aba 3</p>
+      </div>
+      <div class="contact_alight">
+        <h3>Contato</h3>
+        <p>Contato 1</p>
+        <p>Contato 2</p>
+        <p>Contato 3</p>
+      </div>
+      <div class="more_alight">
+        <div class="location_alight">
+          <i class="bi bi-geo-alt-fill"></i>
+          <a href="">Localizacao</a>
+        </div>
+        <div class="redes_alight">
+          <h3>Redes Sociais</h3>
+          <div class="redes">
+            <a href="https://www.instagram.com/eebrigadeiroeduardo" target="_blank" rel="noopener noreferrer"><i class="bi bi-instagram"></i></a>
+            <a href="https://www.facebook.com/EE.BrigadeiroEduardoGomes" target="_blank" rel="noopener noreferrer"><i class="bi bi-facebook"></i></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
