--- a/Home.html
+++ b/Home.html
@@ -25,7 +25,7 @@
             <a class="nav-link" href="src/More html/Avisos.html">Avisos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">condecoracoes</a>
+            <a class="nav-link" href="src/More html/condecoracoes.html">condecoracoes</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Ajuda</a>
