--- a/src/More html/condecoracoes.html
+++ b/src/More html/condecoracoes.html
@@ -1,31 +1,33 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/Global.css">
-  <link rel="stylesheet" href="../css/Avisos.css">
+  <link rel="stylesheet" href="../css/condecoracoes.css">
   <title>Beg</title>
 </head>
-<body>  
+<body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <img class="navbar-brand" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Logo">
+  
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
+  
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link" aria-current="page" href="../../Home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../More html/Avisos.html">Avisos</a>
+            <a class="nav-link" href="../More html/Avisos.html">Avisos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="condecoracoes.html">Condecorações</a>
+            <a class="nav-link active" href="condecoracoes.html">Condecorações</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Ajuda</a>
@@ -35,82 +37,35 @@
               Saiba Mais
             </a>
             <ul class="dropdown-menu">
-              <li><a class="dropdown-item" href="#"><i class="bi bi-people-fill">Interclasse</i></a></li>
-              <li><a class="dropdown-item" href="#"><i class="bi bi-clock">Horários</i></a></li>
-              <li><a class="dropdown-item" href="#"><i class="bi bi-egg-fried">Merenda</i></a></li>
-              <li><a class="dropdown-item" href="#"><i class="bi bi-card-text">Mural</i></a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-people-fill"></i> Interclasse</a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-clock"></i> Horários</a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-egg-fried"></i> Merenda</a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-card-text"></i> Mural</a></li>
               <li><hr class="dropdown-divider"></li>
-              <li><a class="dropdown-item" href="#"><i class="bi bi-person-video3">Professores</i></a></li>
-              <li><a class="dropdown-item" href="#"><i class="bi bi-code-slash">Desenvolvedores</i></a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-person-video3"></i> Professores</a></li>
+              <li><a class="dropdown-item" href="#"><i class="bi bi-code-slash"></i> Desenvolvedores</a></li>
             </ul>
           </li>
         </ul>
+  
         <form class="d-flex align-items-center justify-content-between" role="account">
-          <a class="user d-block" href="Usuario.html">Ola, <span class="name">Nome</span> <img class="user_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg"></a>
+          <a class="user d-block" href="Usuario.html">Olá, <span class="name">Nome</span> <img class="user_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Imagem de usuário"></a>
         </form>
       </div>
     </div>
-  </nav>  
-  <main class="avisos">
-    <div class="container">
-      <h1>Avisos</h1>
-      <div class="row">
-        <div class="col-sm-6 col-md-4 mb-3">
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title-alight">
-                <h5 class="card-title d-flex">Título do Aviso</h5>
-                <p class="priority-boll"></p>
-              </div>
-              <p class="card-text">Descrição do Aviso</p>
-            </div>
-          </div>
+  </nav>
+  
+  <main>
+    <div class="depoi_bg">
+      <div class="depoi">
+        <img src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg">
+        <div class="depoi_content">
+          <h4>nome</h4>
+          <p>Descricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do Aluno</p>
         </div>
-        <div class="col-sm-6 col-md-4 mb-3">
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title-alight">
-                <h5 class="card-title d-flex">Título do Aviso</h5>
-                <p class="priority-boll"></p>
-              </div>
-              <p class="card-text">Descrição do Aviso</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 mb-3">
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title-alight">
-                <h5 class="card-title d-flex">Título do Aviso</h5>
-                <p class="priority-boll"></p>
-              </div>
-              <p class="card-text">Descrição do Aviso</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 mb-3">
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title-alight">
-                <h5 class="card-title d-flex">Título do Aviso</h5>
-                <p class="priority-boll"></p>
-              </div>
-              <p class="card-text">Descrição do Aviso</p>
-            </div>
-          </div>
-        </div>
-        <div class="col-sm-6 col-md-4 mb-3">
-          <div class="card">
-            <div class="card-body">
-              <div class="card-title-alight">
-                <h5 class="card-title d-flex">Título do Aviso</h5>
-                <p class="priority-boll"></p>
-              </div>
-              <p class="card-text">Descrição do Aviso</p>
-            </div>
-          </div>
-        </div>
+        <a href="More Html conde/Info_condecoracoes.html"><button class="More_button"><i class="bi bi-file-earmark-text"></i> Saber Mais</button></a>
       </div>
+    </div>
   </main>
   <footer>
     <div class="footer_alight">
@@ -142,6 +97,7 @@
       </div>
     </div>
   </footer>
+
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
