more condecoracoes css

--- a/src/More html/More Html conde/Info_condecoracoes.html
+++ b/src/More html/More Html conde/Info_condecoracoes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,16 +9,20 @@
   <title>Nome</title>
 </head>
 <body>
-  <a><button>voltar</button></a>
-  <div class="depoi_bg">
-    <div class="depoi">
-      <img src="../../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg">
-      <div class="depoi_content">
-        <h4>Tipo Da Medalha</h4>
-        <p>Descricao de como conseguiu</p>
-        <p>Data:</p>
-      </div>
+  <main>
+    <div class="container">
+      <a href="../condecoracoes.html"><button class="return">voltar</button></a>
+        <div class="depoi_bg">
+          <div class="depoi">
+            <img class="conquists" src="../../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg">
+            <div class="depoi_content">
+              <h4>Tipo Da Medalha</h4>
+              <p>Descricao de como conseguiu</p>
+              <p>Data:</p>
+            </div>
+          </div>
+        </div>
     </div>
-  </div>
+  </main>
 </body>
 </html>
