--- a/src/More html/condecoracoes.html
+++ b/src/More html/condecoracoes.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,14 +56,16 @@
   </nav>
   
   <main>
-    <div class="depoi_bg">
-      <div class="depoi">
-        <img src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg">
-        <div class="depoi_content">
-          <h4>nome</h4>
-          <p>Descricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do Aluno</p>
+    <div class="container">
+      <div class="depoi_bg">
+        <div class="depoi">
+          <img class="aluno" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg">
+          <div class="depoi_content">
+            <h4>nome</h4>
+            <p>Descricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do Aluno</p>
+          </div>
+          <a href="More Html conde/Info_condecoracoes.html"><button class="More_button"><i class="bi bi-file-earmark-text"></i> Saber Mais</button></a>
         </div>
-        <a href="More Html conde/Info_condecoracoes.html"><button class="More_button"><i class="bi bi-file-earmark-text"></i> Saber Mais</button></a>
       </div>
     </div>
   </main>
