new tab developers

--- a/Home.html
+++ b/Home.html
@@ -38,10 +38,10 @@
               <li><a class="dropdown-item" href="#"><i class="bi bi-people-fill"> </i>Interclasse</a></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-clock"> </i>Horarios</a></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-egg-fried"> </i>Merenda</a></li>
-              <li><a class="dropdown-item" href="#"><i class="bi bi-card-text"> </i>Mural</a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://padlet.com/peibeg/central-de-documentos-dos-professores-2024-23z00lmt1jgpyat"><i class="bi bi-card-text"> </i>Mural</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-person-video3"> </i>Professores</a></li>
-              <li><a class="dropdown-item" href="#"><i class="bi bi-code-slash"> </i>Desenvolvedores</a></li>
+              <li><a class="dropdown-item" href="src/More html/devs.html"><i class="bi bi-code-slash"> </i>Desenvolvedores</a></li>
             </ul>
           </li>
         </ul>
