--- a/src/More html/Avisos.html
+++ b/src/More html/Avisos.html
@@ -22,7 +22,7 @@
             <a class="nav-link" aria-current="page" href="../../Home.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" href="../More html/Avisos.html">Avisos</a>
+            <a class="nav-link active" href="Avisos.html">Avisos</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="condecoracoes.html">Condecorações</a>
@@ -38,10 +38,10 @@
               <li><a class="dropdown-item" href="#"><i class="bi bi-people-fill">Interclasse</i></a></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-clock">Horários</i></a></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-egg-fried">Merenda</i></a></li>
-              <li><a class="dropdown-item" href="#"><i class="bi bi-card-text">Mural</i></a></li>
+              <li><a class="dropdown-item" target="_blank" href="https://padlet.com/peibeg/central-de-documentos-dos-professores-2024-23z00lmt1jgpyat"><i class="bi bi-card-text">Mural</i></a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-person-video3">Professores</i></a></li>
-              <li><a class="dropdown-item" href="#"><i class="bi bi-code-slash">Desenvolvedores</i></a></li>
+              <li><a class="dropdown-item" href="devs.html"><i class="bi bi-code-slash">Desenvolvedores</i></a></li>
             </ul>
           </li>
         </ul>
@@ -54,8 +54,8 @@
   <main class="avisos">
     <div class="container">
       <h1>Avisos</h1>
-      <div class="row">
-        <div class="col-sm-6 col-md-4 mb-3">
+      <div class="column">
+        <div class="mb-3">
           <div class="card">
             <div class="card-body">
               <div class="card-title-alight">
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mb-3">
+        <div class="mb-3">
           <div class="card">
             <div class="card-body">
               <div class="card-title-alight">
@@ -77,7 +77,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mb-3">
+        <div class="mb-3">
           <div class="card">
             <div class="card-body">
               <div class="card-title-alight">
@@ -88,7 +88,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mb-3">
+        <div class="mb-3">
           <div class="card">
             <div class="card-body">
               <div class="card-title-alight">
@@ -99,7 +99,7 @@
             </div>
           </div>
         </div>
-        <div class="col-sm-6 col-md-4 mb-3">
+        <div class="mb-3">
           <div class="card">
             <div class="card-body">
               <div class="card-title-alight">
