--- a/src/More html/devs.html
+++ b/src/More html/devs.html
@@ -6,36 +6,24 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <link rel="stylesheet" href="../css/Global.css">
-  <link rel="stylesheet" href="../css/condecoracoes.css">
+  <link rel="stylesheet" href="../css/devs.css">
   <title>Beg</title>
 </head>
 <body>
   <nav class="navbar navbar-expand-lg">
     <div class="container-fluid">
       <img class="navbar-brand" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Logo">
-  
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-  
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="../../Home.html">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="Avisos.html">Avisos</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link active" href="condecoracoes.html">Condecorações</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Ajuda</a>
-          </li>
+          <li class="nav-item"><a class="nav-link" aria-current="page" href="../../Home.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="Avisos.html">Avisos</a></li>
+          <li class="nav-item"><a class="nav-link" href="condecoracoes.html">Condecorações</a></li>
+          <li class="nav-item"><a class="nav-link" href="#">Ajuda</a></li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-              Saiba Mais
-            </a>
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Saiba Mais</a>
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#"><i class="bi bi-people-fill"></i> Interclasse</a></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-clock"></i> Horários</a></li>
@@ -43,32 +31,65 @@
               <li><a class="dropdown-item" target="_blank" href="https://padlet.com/peibeg/central-de-documentos-dos-professores-2024-23z00lmt1jgpyat"><i class="bi bi-card-text"></i> Mural</a></li>
               <li><hr class="dropdown-divider"></li>
               <li><a class="dropdown-item" href="#"><i class="bi bi-person-video3"></i> Professores</a></li>
-              <li><a class="dropdown-item" href="devs.html"><i class="bi bi-code-slash"></i> Desenvolvedores</a></li>
+              <li><a class="dropdown-item active" href="devs.html"><i class="bi bi-code-slash"></i> Desenvolvedores</a></li>
             </ul>
           </li>
         </ul>
-  
         <form class="d-flex align-items-center justify-content-between" role="account">
           <a class="user d-block" href="Usuario.html">Olá, <span class="name">Nome</span> <img class="user_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Imagem de usuário"></a>
         </form>
       </div>
     </div>
   </nav>
-  
-  <main>
-    <div class="container">
-      <div class="depoi_bg">
-        <div class="depoi">
-          <img class="aluno" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg">
-          <div class="depoi_content">
-            <h4>nome</h4>
-            <p>Descricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do AlunoDescricao do Aluno</p>
+  <header>
+    <h1>Desenvolvedores</h1>
+  </header>
+  <div class="container">
+    <main>
+      <section class="devs">
+        <div class="content">
+          <img class="dev_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Imagem do desenvolvedor">
+          <div class="dev_info">
+            <h2>Nome do Desenvolvedor</h2>
+            <p>Descrição do desenvolvedor</p>
+            <h5>Funcao Do Dev</h5>
           </div>
-          <a href="More Html conde/Info_condecoracoes.html"><button class="More_button"><i class="bi bi-file-earmark-text"></i> Saber Mais</button></a>
         </div>
-      </div>
-    </div>
-  </main>
+        <div class="content2">
+          <img class="dev_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Imagem do desenvolvedor">
+          <div class="dev_info">
+            <h2>Nome do Desenvolvedor</h2>
+            <p>Descrição do desenvolvedor</p>
+            <h5>Funcao Do Dev</h5>
+          </div>
+        </div>
+        <div class="content">
+          <img class="dev_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Imagem do desenvolvedor">
+          <div class="dev_info">
+            <h2>Nome do Desenvolvedor</h2>
+            <p>Descrição do desenvolvedor</p>
+            <h5>Funcao Do Dev</h5>
+          </div>
+        </div>
+        <div class="content2">
+          <img class="dev_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Imagem do desenvolvedor">
+          <div class="dev_info">
+            <h2>Nome do Desenvolvedor</h2>
+            <p>Descrição do desenvolvedor</p>
+            <h5>Funcao Do Dev</h5>
+          </div>
+        </div>
+        <div class="content">
+          <img class="dev_img" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg" alt="Imagem do desenvolvedor">
+          <div class="dev_info">
+            <h2>Nome do Desenvolvedor</h2>
+            <p>Descrição do desenvolvedor</p>
+            <h5>Funcao Do Dev</h5>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
   <footer>
     <div class="footer_alight">
       <img class="logo_footer" src="../img/Imagem do WhatsApp de 2024-09-13 à(s) 17.41.36_b8090aea.jpg">
@@ -99,7 +120,6 @@
       </div>
     </div>
   </footer>
-
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </html>
